crates/strider/tests/snapshots/x86__patterns__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x401130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v28" [color="#888888", style=dashed];
  "v28" -> "25" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v32" [color="#888888", style=dashed];
  "v32" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "20" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "20" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "37" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x40120f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "15" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "53" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x4011f7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "56" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "59" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "61" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v67" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v67" [color="#888888", style=dashed];
  "v67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "68" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x4011d7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v77" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v77" [color="#888888", style=dashed];
  "v77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "76" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "78" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x4011c7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v87" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v87" [color="#888888", style=dashed];
  "v87" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "86" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "88" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v89" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v89" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "90" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x4011b7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "91" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "88" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "88" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "94" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "94" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "97" -> "94" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v98" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v98" -> "94" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "99" -> "94" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "97" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "100" -> "97" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v101" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v101" -> "97" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "102" -> "97" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "102" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "100" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
